--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
+    "react-lazy-load-image-component": "^1.6.0",
     "simplebar-react": "^3.2.4",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
