update: package.json

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@minimal-kit/starter-next-js",
-  "author": "Minimals",
+  "name": "ultrasoftware",
+  "author": "elite",
   "version": "5.6.0",
   "description": "Next Starter & JavaScript",
   "private": true,
