--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.30.0",
     "framer-motion": "^10.16.4",
     "lodash": "^4.17.21",
+    "mapbox-gl": "^2.15.0",
     "next": "^13.5.4",
     "nprogress": "^0.2.0",
     "prop-types": "^15.8.1",
@@ -37,10 +38,11 @@
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.47.0",
     "react-lazy-load-image-component": "^1.6.0",
-    "react-map-gl": "^7.1.7",
+    "react-map-gl": "^7.1.6",
     "simplebar-react": "^3.2.4",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
+    "yet-another-react-lightbox": "^3.13.0",
     "yup": "^1.3.2"
   },
   "devDependencies": {
