--- a/package.json
+++ b/package.json
@@ -39,7 +39,9 @@
     "react-hook-form": "^7.47.0",
     "react-lazy-load-image-component": "^1.6.0",
     "react-map-gl": "^7.1.6",
+    "react-slick": "^0.29.0",
     "simplebar-react": "^3.2.4",
+    "slick-carousel": "^1.8.1",
     "stylis": "^4.3.0",
     "stylis-plugin-rtl": "^2.1.1",
     "yet-another-react-lightbox": "^3.13.0",
