--- a/public/manifest.json
+++ b/public/manifest.json
@@ -7,12 +7,12 @@
   "background_color": "#ffffff",
   "icons": [
     {
-      "src": "favicon/android-chrome-192x192.png",
+      "src": "logo/ultra.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "favicon/android-chrome-512x512.png",
+      "src": "logo/ultra.png",
       "sizes": "512x512",
       "type": "image/png"
     }
